<resources>
    <string name="app_name">Lorde Calculator</string>
    <string name="dac_biet">Đặc biệt</string>
    <string name="num_plh">46120</string>
    <string name="giai_nhat">Giải nhất</string>
    <string name="giai_nhi">Giải nhì</string>
    <string name="giai_ba">giải ba</string>
    <string name="giai_tu">giải tư</string>
    <string name="giai_nam">Giải năm</string>
    <string name="giai_sau">giải sáu</string>
    <string name="giai_bay">Giải bày</string>
    <string name="kqxs_ngay">Kết quả xổ số</string>
    <string name="huy">Huỷ</string>
    <string name="tao_moi">Tạo mới</string>
    <string name="chinh_sua">Sửa</string>
    <string name="dau">đầu</string>
    <string name="loto">Lô tô</string>
    <string name="dit">đít</string>
    <string name="nha_cai">- Nhà cái</string>
    <string name="de">Đề</string>
    <string name="xien">Xiên</string>
    <string name="lo">Lô</string>
    <string name="quay_lai">Quay lại</string>
    <string name="them_moi">Thêm mới</string>
    <string name="them_moi_nguoi_dung">Thêm mới người dùng</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="nha_cai_2">Nhà cái</string>
    <string name="ti_le_de">Tỉ lệ đề</string>
    <string name="ti_le_xien">Tỉ lệ xiên</string>
    <string name="ti_le_lo">Tỉ lệ lô</string>
    <string name="ten">Tên</string>
    <string name="xoa">Xoá</string>
    <string name="cap_nhat">Cập nhật</string>
    <string name="xien_quay">Xiên quay</string>
    <string name="dau_dit">đầu đít</string>
    <string name="so">Số</string>
    <string name="gia_tri">Giá trị</string>
    <string name="diem">Điểm</string>
    <string name="nghin">Nghìn</string>
    <string name="du_lieu_sai">Dữ liệu sai!</string>
    <string name="blank">BLANK!</string>
</resources>
