<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/color_1"
        android:padding="3dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quay_lai"
            android:id="@+id/btn_back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nha_cai"
            android:textSize="18sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:id="@+id/txt_title"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tao_moi"
            android:id="@+id/btn_submit"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_2"/>
    <com.jaychang.srv.SimpleRecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recycler_view"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_2"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lo"
                android:textSize="22sp"
                android:id="@+id/btn_add_lo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/de"
                android:textSize="22sp"
                android:id="@+id/btn_add_de"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/xien"
                android:textSize="22sp"
                android:id="@+id/btn_add_xien"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/xien_quay"
                android:textSize="22sp"
                android:id="@+id/btn_add_xien_quay"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dau"
                android:textSize="22sp"
                android:id="@+id/btn_add_dau"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dit"
                android:textSize="22sp"
                android:id="@+id/btn_add_dit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dau_dit"
                android:textSize="22sp"
                android:id="@+id/btn_add_dau_dit"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>