<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/them_moi_nguoi_dung"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_dien_thoai"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone"
        android:inputType="phone"
        android:textSize="20sp"
        android:imeOptions="actionNext"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nha_cai_2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <CheckBox
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:checked="false"
        android:id="@+id/checkbox_is_host"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_le_de"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_rate_de"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_le_lo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_rate_lo"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_le_xien"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_rate_xien"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quay_lai"
            android:id="@+id/btn_back"/>
        <Button
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tao_moi"
            android:id="@+id/btn_done"/>
    </LinearLayout>
</LinearLayout>