<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/xien"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/txt_title"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:id="@+id/edt_numbers"
        android:text="100"
        android:inputType="phone"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gia_tri"
        android:textSize="18sp"
        android:layout_marginTop="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:id="@+id/edt_value"
            android:text="100"
            android:inputType="numberDecimal"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diem"
            android:textSize="20sp"
            android:id="@+id/txt_unit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:id="@+id/btn_cancel"
            android:layout_marginRight="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tao_moi"
            android:id="@+id/btn_submit"/>

    </LinearLayout>
</LinearLayout>