<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardPreventCornerOverlap="true"
    android:background="@color/color_1"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dac_biet"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/txt_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nha_cai"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/color_20"
                android:id="@+id/txt_is_host"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dac_biet"
            android:textSize="20sp"
            android:id="@+id/txt_phone_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/de"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.75"
                    android:gravity="center_vertical"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/txt_rate_de"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lo"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.75"
                    android:gravity="center_vertical"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/txt_rate_lo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xien"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.75"
                    android:gravity="center_vertical"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/txt_rate_xien"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/btn_edit"
                    android:text="@string/chinh_sua"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/btn_delete"
                    android:text="@string/xoa"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>