<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1"
    android:gravity="center"
    android:padding="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kqxs ngay thu 3 20/10/1992"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/txt_date"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/container_kqxs"
        android:background="@drawable/background_stroke_thin_black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/dac_biet"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                style="@style/KQXSText"
                android:textColor="@color/color_50"
                
                android:id="@+id/txt_val_0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_nhat"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                style="@style/KQXSText"
                
                android:id="@+id/txt_val_1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_nhi"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                style="@style/KQXSText"
                
                android:id="@+id/txt_val_2"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                style="@style/KQXSText"
                
                android:id="@+id/txt_val_3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_ba"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        
                        android:id="@+id/txt_val_4"/>
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        
                        android:id="@+id/txt_val_5"/>
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:id="@+id/txt_val_6"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        
                        android:id="@+id/txt_val_7"/>
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:id="@+id/txt_val_8"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_9"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_tu"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                
                android:id="@+id/txt_val_10"/>
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:id="@+id/txt_val_11"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                />
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:id="@+id/txt_val_12"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                />
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:id="@+id/txt_val_13"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_nam"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.8"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_14"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_15"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_16"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_17"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_18"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                    <EditText
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:id="@+id/txt_val_19"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        style="@style/KQXSText"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_sau"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <EditText
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/KQXSText"
                    
                    android:id="@+id/txt_val_20"/>
                <EditText
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/KQXSText"
                    android:id="@+id/txt_val_21"
                    />
                <EditText
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    style="@style/KQXSText"
                    android:id="@+id/txt_val_22"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:text="@string/giai_bay"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:inputType="number"
                android:imeOptions="actionNext"
                
                android:id="@+id/txt_val_23"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:id="@+id/txt_val_24"
                android:inputType="number"
                android:imeOptions="actionNext"
                />
            <EditText
                android:inputType="number"
                android:imeOptions="actionNext"
                android:id="@+id/txt_val_25"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                />
            <EditText
                android:id="@+id/txt_val_26"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                style="@style/KQXSText"
                android:inputType="number"
                android:imeOptions="actionNext"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:id="@+id/btn_cancel"
            android:layout_marginRight="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tao_moi"
            android:layout_marginLeft="15dp"
            android:id="@+id/btn_submit"/>
    </LinearLayout>
</LinearLayout>